--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ffmpeg-static": "^5.2.0",
     "googleapis": "^148.0.0",
     "libsodium-wrappers": "^0.7.15",
+    "play-dl": "^1.9.7",
     "sodium-native": "^4.3.3",
     "youtube-dl-exec": "^2.4.6",
     "youtube-sr": "^4.3.10"
